@@ -85,6 +85,11 @@ public:
     // Create the control of the right type using the given parent and style.
     virtual wxControl* Create(wxWindow* parent, int style) const = 0;
 
+    // Return another creator similar to this one, but creating multiline
+    // version of the control. If the returned pointer is non-null, it must be
+    // deleted by the caller.
+    virtual TextLikeControlCreator* CloneAsMultiLine() const { return NULL; }
+
     // Give it a virtual dtor to avoid warnings even though this class is not
     // supposed to be used polymorphically.
     virtual ~TextLikeControlCreator() {}
